# 2AMC15-Assignment-2

./: .gitignore  README.md  pyproject.toml  refactor_steps.md  run_experiments.py  test_continuous.py  train.py  train_DQN.py  train_deep.py  train_mc.py  train_ql.py  train_vi.py  visualize_random_agent.py
agents/: __init__.py  a3c_agent.py  base_agent.py  curiosity.py  ddqn_agent.py  defaults.py  dqn_agent.py  epsilon_schedules.py  learning_rates.py  mc_agent.py  null_agent.py  off_policy_mc_agent.py  q_learning_agent.py  random_agent.py  replay_buffer.py  value_iteration_agent.py
docs/: batch_changes_plan.md  plotting.md  training_logger.md
experiments/: __init__.py  overview.py  plots.py  runner.py  specs.py
grid_configs/: big_spaces_cave.npy  cave_like.npy  realistic_super_hard_cave.npy  simple_cave_grid.npy  solvable.npy  test.npy  unsolvable.npy
report_result/: evaluation_results.csv  final_evaluation_table.md
report_results/: aggregated_overview.csv  aggregated_overview.md  overview.csv  overview.md  results.csv
results/: evaluation_results.csv
scripts/: create_final_artifacts.py  experiment_1.sh  experiment_2.sh  experiment_3.sh  merge_experiments.py  simple_cave_grid.sh  smoke_experiments.sh  super_hard_grid.sh
training/: __init__.py  config.py  defaults.py  trainer.py
utils/: README.md  artifacts.py  dqn_artifacts.py  evaluation.py  plotting.py  rl_plots.py  training_logger.py
world/: __init__.py  continuous_environment.py  defaults.py  environment.py  environment_base.py  grid.py  grid_codes.py  grid_creator.py  gui.py  helpers.py  (+2 more)
(+28 files in other folders)
