[project]
name = "rl-in-practice-group-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorcet>=3.0",
    "flask>=2.2",
    "flask-socketio>=5.3",
    "matplotlib>=3.10.9",
    "numpy>=1.24",
    "pillow>=9.4",
    "pygame>=2.3",
    "torch>=2.0",
    "tqdm>=4",
    "wandb>=0.26.1",
]
